i2f-tools/i2f-jdbc-procedure-idea-plugin/src/main/java/i2f/turbo/idea/plugin/funic/grammar/parser/FunicParser.java
// This is a generated file. Not intended for manual editing.
package i2f.turbo.idea.plugin.funic.grammar.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;

import static i2f.turbo.idea.plugin.funic.grammar.psi.FunicTypes.*;
import static i2f.turbo.idea.plugin.funic.lang.parser.FunicParserUtil.*;

import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class FunicParser implements PsiParser, LightPsiParser {

    public ASTNode parse(IElementType t, PsiBuilder b) {
        parseLight(t, b);
        return b.getTreeBuilt();
    }

    public void parseLight(IElementType t, PsiBuilder b) {
        boolean r;
        b = adapt_builder_(t, b, this, null);
        Marker m = enter_section_(b, 0, _COLLAPSE_, null);
        r = parse_root_(t, b);
        exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
    }

    protected boolean parse_root_(IElementType t, PsiBuilder b) {
        return parse_root_(t, b, 0);
    }

    static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
        return root(b, l + 1);
    }

    /* ********************************************************** */
    // (OP_ASSIGN | OP_ASSIGN_ADD | OP_ASSIGN_SUB | OP_ASSIGN_MUL | OP_ASSIGN_DIV | OP_ASSIGN_MOD | OP_ASSIGN_IFNULL | OP_ASSIGN_NOTNULL) express
    public static boolean assignRightPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "assignRightPart")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, ASSIGN_RIGHT_PART, "<assign right part>");
        r = assignRightPart_0(b, l + 1);
        r = r && express(b, l + 1);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // OP_ASSIGN | OP_ASSIGN_ADD | OP_ASSIGN_SUB | OP_ASSIGN_MUL | OP_ASSIGN_DIV | OP_ASSIGN_MOD | OP_ASSIGN_IFNULL | OP_ASSIGN_NOTNULL
    private static boolean assignRightPart_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "assignRightPart_0")) return false;
        boolean r;
        r = consumeToken(b, OP_ASSIGN);
        if (!r) r = consumeToken(b, OP_ASSIGN_ADD);
        if (!r) r = consumeToken(b, OP_ASSIGN_SUB);
        if (!r) r = consumeToken(b, OP_ASSIGN_MUL);
        if (!r) r = consumeToken(b, OP_ASSIGN_DIV);
        if (!r) r = consumeToken(b, OP_ASSIGN_MOD);
        if (!r) r = consumeToken(b, OP_ASSIGN_IFNULL);
        if (!r) r = consumeToken(b, OP_ASSIGN_NOTNULL);
        return r;
    }

    /* ********************************************************** */
    // (OP_RECV_FROM express)+
    public static boolean awaitExpress(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "awaitExpress")) return false;
        if (!nextTokenIs(b, OP_RECV_FROM)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = awaitExpress_0(b, l + 1);
        while (r) {
            int c = current_position_(b);
            if (!awaitExpress_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "awaitExpress", c)) break;
        }
        exit_section_(b, m, AWAIT_EXPRESS, r);
        return r;
    }

    // OP_RECV_FROM express
    private static boolean awaitExpress_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "awaitExpress_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, OP_RECV_FROM);
        r = r && express(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // OP_BIT_LMOV| KW_SHL | OP_BIT_RSMOV| KW_USHR | OP_BIT_RMOV| KW_SHR | OP_BIT_XOR| KW_XOR  | OP_BIT_AND| KW_BAND  | OP_BIT_OR| KW_BOR
    public static boolean bitOperatorPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "bitOperatorPart")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, BIT_OPERATOR_PART, "<bit operator part>");
        r = consumeToken(b, OP_BIT_LMOV);
        if (!r) r = consumeToken(b, KW_SHL);
        if (!r) r = consumeToken(b, OP_BIT_RSMOV);
        if (!r) r = consumeToken(b, KW_USHR);
        if (!r) r = consumeToken(b, OP_BIT_RMOV);
        if (!r) r = consumeToken(b, KW_SHR);
        if (!r) r = consumeToken(b, OP_BIT_XOR);
        if (!r) r = consumeToken(b, KW_XOR);
        if (!r) r = consumeToken(b, OP_BIT_AND);
        if (!r) r = consumeToken(b, KW_BAND);
        if (!r) r = consumeToken(b, OP_BIT_OR);
        if (!r) r = consumeToken(b, KW_BOR);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // KW_BREAK
    public static boolean breakExpress(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "breakExpress")) return false;
        if (!nextTokenIs(b, KW_BREAK)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_BREAK);
        exit_section_(b, m, BREAK_EXPRESS, r);
        return r;
    }

    /* ********************************************************** */
    // KW_AS (typeClass| express)
    public static boolean castAsRightPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "castAsRightPart")) return false;
        if (!nextTokenIs(b, KW_AS)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_AS);
        r = r && castAsRightPart_1(b, l + 1);
        exit_section_(b, m, CAST_AS_RIGHT_PART, r);
        return r;
    }

    // typeClass| express
    private static boolean castAsRightPart_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "castAsRightPart_1")) return false;
        boolean r;
        r = typeClass(b, l + 1);
        if (!r) r = express(b, l + 1);
        return r;
    }

    /* ********************************************************** */
    // KW_CATCH TERM_PAREN_L (fullName (OP_BIT_OR fullName)*) IDENTIFIER TERM_PAREN_R scriptBlock
    //     | KW_CATCH TERM_PAREN_L IDENTIFIER TERM_PAREN_R scriptBlock
    public static boolean catchBlock(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock")) return false;
        if (!nextTokenIs(b, KW_CATCH)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = catchBlock_0(b, l + 1);
        if (!r) r = catchBlock_1(b, l + 1);
        exit_section_(b, m, CATCH_BLOCK, r);
        return r;
    }

    // KW_CATCH TERM_PAREN_L (fullName (OP_BIT_OR fullName)*) IDENTIFIER TERM_PAREN_R scriptBlock
    private static boolean catchBlock_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, KW_CATCH, TERM_PAREN_L);
        r = r && catchBlock_0_2(b, l + 1);
        r = r && consumeTokens(b, 0, IDENTIFIER, TERM_PAREN_R);
        r = r && scriptBlock(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // fullName (OP_BIT_OR fullName)*
    private static boolean catchBlock_0_2(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock_0_2")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = fullName(b, l + 1);
        r = r && catchBlock_0_2_1(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // (OP_BIT_OR fullName)*
    private static boolean catchBlock_0_2_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock_0_2_1")) return false;
        while (true) {
            int c = current_position_(b);
            if (!catchBlock_0_2_1_0(b, l + 1)) break;
            if (!empty_element_parsed_guard_(b, "catchBlock_0_2_1", c)) break;
        }
        return true;
    }

    // OP_BIT_OR fullName
    private static boolean catchBlock_0_2_1_0(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock_0_2_1_0")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, OP_BIT_OR);
        r = r && fullName(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    // KW_CATCH TERM_PAREN_L IDENTIFIER TERM_PAREN_R scriptBlock
    private static boolean catchBlock_1(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "catchBlock_1")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, KW_CATCH, TERM_PAREN_L, IDENTIFIER, TERM_PAREN_R);
        r = r && scriptBlock(b, l + 1);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_PAREN_L express TERM_PAREN_R
    public static boolean circleExpress(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "circleExpress")) return false;
        if (!nextTokenIs(b, TERM_PAREN_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_PAREN_L);
        r = r && express(b, l + 1);
        r = r && consumeToken(b, TERM_PAREN_R);
        exit_section_(b, m, CIRCLE_EXPRESS, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_COMMENT_SINGLE_LINE | TERM_COMMENT_MULTI_LINE
    public static boolean commentSegment(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "commentSegment")) return false;
        if (!nextTokenIs(b, "<comment segment>", TERM_COMMENT_MULTI_LINE, TERM_COMMENT_SINGLE_LINE)) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, COMMENT_SEGMENT, "<comment segment>");
        r = consumeToken(b, TERM_COMMENT_SINGLE_LINE);
        if (!r) r = consumeToken(b, TERM_COMMENT_MULTI_LINE);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    /* ********************************************************** */
    // OP_TEQ | KW_TEQ | OP_TNEQ | KW_TNEQ | OP_GT | KW_GT | OP_GTE | KW_GTE | OP_LT | KW_LT | OP_LTE | KW_LTE | OP_EQ | KW_EQ | OP_NE | OP_NEQ | KW_NEQ | KW_NE | KW_IN | (KW_NOT KW_IN) | KW_INSTANCEOF | KW_IS
    public static boolean compareOperatorPart(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "compareOperatorPart")) return false;
        boolean r;
        Marker m = enter_section_(b, l, _NONE_, COMPARE_OPERATOR_PART, "<compare operator part>");
        r = consumeToken(b, OP_TEQ);
        if (!r) r = consumeToken(b, KW_TEQ);
        if (!r) r = consumeToken(b, OP_TNEQ);
        if (!r) r = consumeToken(b, KW_TNEQ);
        if (!r) r = consumeToken(b, OP_GT);
        if (!r) r = consumeToken(b, KW_GT);
        if (!r) r = consumeToken(b, OP_GTE);
        if (!r) r = consumeToken(b, KW_GTE);
        if (!r) r = consumeToken(b, OP_LT);
        if (!r) r = consumeToken(b, KW_LT);
        if (!r) r = consumeToken(b, OP_LTE);
        if (!r) r = consumeToken(b, KW_LTE);
        if (!r) r = consumeToken(b, OP_EQ);
        if (!r) r = consumeToken(b, KW_EQ);
        if (!r) r = consumeToken(b, OP_NE);
        if (!r) r = consumeToken(b, OP_NEQ);
        if (!r) r = consumeToken(b, KW_NEQ);
        if (!r) r = consumeToken(b, KW_NE);
        if (!r) r = consumeToken(b, KW_IN);
        if (!r) r = compareOperatorPart_19(b, l + 1);
        if (!r) r = consumeToken(b, KW_INSTANCEOF);
        if (!r) r = consumeToken(b, KW_IS);
        exit_section_(b, l, m, r, false, null);
        return r;
    }

    // KW_NOT KW_IN
    private static boolean compareOperatorPart_19(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "compareOperatorPart_19")) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeTokens(b, 0, KW_NOT, KW_IN);
        exit_section_(b, m, null, r);
        return r;
    }

    /* ********************************************************** */
    // TERM_PAREN_L express TERM_PAREN_R
    public static boolean conditionBlock(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "conditionBlock")) return false;
        if (!nextTokenIs(b, TERM_PAREN_L)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, TERM_PAREN_L);
        r = r && express(b, l + 1);
        r = r && consumeToken(b, TERM_PAREN_R);
        exit_section_(b, m, CONDITION_BLOCK, r);
        return r;
    }

    /* ********************************************************** */
    // KW_CONST_BOOLEAN
    public static boolean constBoolean(PsiBuilder b, int l) {
        if (!recursion_guard_(b, l, "constBoolean")) return false;
        if (!nextTokenIs(b, KW_CONST_BOOLEAN)) return false;
        boolean r;
        Marker m = enter_section_(b);
        r = consumeToken(b, KW_CONST_BOOLEAN);
        exit_section_(b, m, CONST_BOOLEAN, r);
        return r;
    }
